--- a/game2.html
+++ b/game2.html
@@ -86,9 +86,9 @@
         </div>
         <div class="modal-footer">
           <div id="imagecontainer" class="hero">
-            <img id="mood" src="assets/images/success.png" />
+            <img id="mood" src="assets/sprites/hero.png" />
           </div>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Вперёд!</button>
         </div>
       </div>
     </div>
